[package]
name = "saplingrustlib"
version = "0.1.0"
authors = ["Satinder Grewal"]
edition = "2018"

[dependencies]
rand = "0.5"
hex = "0.3"
bech32 = "0.6"
zip32 = {  git = "https://github.com/zcash/librustzcash", rev="3b6f5e3d5ede6469f6ae85357f0b03d4c1b45cfe" }
json = "0.11.14"    
blake2-rfc = { git = "https://github.com/gtank/blake2-rfc", rev="7a5b5fc99ae483a0043db7547fb79a6fa44b88a9" }